add create user doc to swagger
